fixed grid on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,6 @@
         @apply text-center font-bold py-2 px-8 rounded bg-gray-600 text-white mx-24 mt-4 shadow-lg
     }
 
-    .grid-layout-main {
-        @apply grid grid-cols-3 justify-center text-white font-mono
-    }
-
     .center {
         @apply mx-auto items-center justify-center
     }
